ingress/cloudfimain-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  rules:
  - host: beatsinthe.cloud 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: y-nginx-app  
            port:
              number: 80  
  tls:
  - hosts:
    - beatsinthe.cloud  
    secretName: cloudfi-tls-secret
